exports[`mcfunction argument parser > minecraft:entity_summon > Parse 'cow' 1`] = `
{
  "node": {
    "type": "resource_location",
    "range": {
      "start": 0,
      "end": 3
    },
    "path": [
      "cow"
    ]
  },
  "errors": []
}
`;

exports[`mcfunction argument parser > minecraft:entity_summon > Parse 'minecraft:pig' 1`] = `
{
  "node": {
    "type": "resource_location",
    "range": {
      "start": 0,
      "end": 13
    },
    "namespace": "minecraft",
    "path": [
      "pig"
    ]
  },
  "errors": []
}
`;
